manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-first-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-first-pod
  template:
    metadata:
      labels:
        app: my-first-pod
    spec:
      containers:
      - image: swoutch/echo-flask
        name: echo-container
        imagePullPolicy: Always
